# c-rest-engine

./: CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  configure.ac  lin_buid.sh  lin_build.sh  td4.sln  win_build.cmd
api/: api.vcproj
client/: CMakeLists.txt  Makefile.am  includes.h  libmain.c  ssl-client.c
common/: CMakeLists.txt  Makefile.am  common.vcproj  includes.h  libmain.c  logging.c  memory.c  sockinterface.c  threads.c  utils.c
docs/: ReST-Engine.docx  RestStartStopRepeat.tcf  SampleRestEngineConfig.cfg  SampleRestEngineConfig.txt  SampleRestEngineConfigPlain.cfg  SampleRestEngineStartCmd.txt  SampleRestEngineStopCmd.txt  USER-GUIDE.txt
include/: Makefile.am  config.h.in  vmrestcommon.h  vmrestdefines.h  vmrestsock.h  vmrestsys.h  vmsock.h
include/public/: Makefile.am  vmrest.h
server/: CMakeLists.txt  Makefile.am  server.vcproj
server/restengine/: CMakeLists.txt  Makefile.am  defines.h  error.h  externs.h  globals.c  httpAllocStruct.c  httpMain.c  httpProtocolHead.c  httpUtils.c  httpUtilsExternal.c  httpUtilsInternal.c  httpValidate.c  http_protocol.c  includes.h  libmain.c  librestengine.c  prototype.h  restProtocolHead.c  structs.h  thread.c
server/transport/: Makefile.am  defines.h  externs.h  globals.c  includes.h  libtransport.c  prototypes.h  socket.c  structs.h
server/transport/api/: Makefile.am
server/transport/posix/: Makefile.am  prototypes.h
server/vmrestd/: CMakeLists.txt  Makefile.am  argParser.c  defines.h  externs.h  globals.c  httpHandlers.c  includes.h  lin_main.c  lin_main2.c  main.c  prototypes.h  service.c  signal.c  ssl-context.c  structs.h  tdnf.c  vmrestd.vcproj
test/: AllTests.c  CuTest.c  CuTest.h  Makefile.am  RestProtocolHead.c  TestHTTPProtocolHead.c  TestHttpUtilsExternal.c  TestHttpUtilsInternal.c  TestHttpValidate.c  TestRestProtocolHead.c  TestTransport.c  includes.h  testUtils.c  testUtils.h
test/scripts/: TestCustomClientInfiniteData.sh  TestCustomClientNonSSL.sh  TestEchoServer.sh  TestLargeDataInLoop.sh  TestSmallDataInLoop.sh  infiteData.c  restclient.c
test/scripts/BUGS_TC/BUG-2052415/: README  restclient.c
test/scripts/BUGS_TC/BUG-2076723/: README  persistentConnection.c
test/scripts/data/expected/: SampleBadContentLength.txt  SampleBadMethod.txt  SampleBadUrl.txt  SampleHeader.txt  SampleShortHeader.txt
test/scripts/data/input/: largedata.txt  sampleSuccess.txt  smalldata.txt
tools/: Makefile.am
tools/rest-cli/: Makefile.am  includes.h  main.c
transport/: Makefile.am  transport.vcproj
transport/api/: Makefile.am  api.c  defines.h  includes.h  libmain.c
transport/include/: vmsockapi.h  vmsockposix.h  vmwinsock.h
transport/posix/: Makefile.am  defines.h  extern.h  externs.h  global.c  globals.c  includes.h  libmain.c  libtransport.c  prototypes.h  secureSocket.c  socket.c  structs.h  utils.c
transport/win/: defines.h  externs.h  globals.c  includes.h  libmain.c  prototypes.h  structs.h  winsock.c
