cmake_minimum_required (VERSION 3.4)

project (vmware-trident)

INCLUDE (CheckIncludeFiles)

CHECK_INCLUDE_FILES(pthread.h HAVE_PTHREAD_H)
CHECK_INCLUDE_FILES(errno.h   HAVE_ERRNO_H)
CHECK_INCLUDE_FILES(stddef.h  HAVE_STDDEF_H)
CHECK_INCLUDE_FILES(stdio.h   HAVE_STDIO_H)
CHECK_INCLUDE_FILES(stdlib.h  HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(string.h  HAVE_STRING_H)
CHECK_INCLUDE_FILES(stdarg.h  HAVE_STDARG_H)
CHECK_INCLUDE_FILES(assert.h  HAVE_ASSERT_H)
CHECK_INCLUDE_FILES(sys/stat.h HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES(sys/socket.h HAVE_SYS_SOCKET_H)
CHECK_INCLUDE_FILES(netinet/in.h HAVE_NETINET_IN_H)
CHECK_INCLUDE_FILES(unistd.h     HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(ctype.h      HAVE_CTYPE_H)
CHECK_INCLUDE_FILES(signal.h     HAVE_SIGNAL_H)
CHECK_INCLUDE_FILES(syslog.h     HAVE_SYSLOG_H)
CHECK_INCLUDE_FILES(locale.h     HAVE_LOCALE_H)
CHECK_INCLUDE_FILES(netdb.h      HAVE_NETDB_H)
CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/include/config.h.in ${PROJECT_BINARY_DIR}/include/config.h)

add_subdirectory(common)
add_subdirectory(client)
add_subdirectory(server)

SET(CPACK_PACKAGE_DESCRIPTION "VMware REST Engine")
SET(CPACK_PACKAGE_VENDOR  "VMware")
SET(CPACK_PACKAGE_VERSION "1.0.0")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")

INCLUDE(CPack)

